added the project to Comfy Registry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ComfyUI-Przewodo-Utils"
+name = "przewodo-utils"
 description = "Utilities to make it easy to develop advanced Workflows without having to use a lot of nodes for simple stuff."
 version = "1.0.0"
 license = { text = "MIT License" }
@@ -7,9 +7,10 @@ dependencies = []
 
 [project.urls]
 Repository = "https://github.com/przewodo/ComfyUI-Przewodo-Utils"
-#  Used by Comfy Registry https://comfyregistry.org
+#  Used by Comfy Registry https://registry.comfy.org
 
 [tool.comfy]
-PublisherId = "Przewodo"
+PublisherId = "przewodo"
 DisplayName = "ComfyUI-Przewodo-Utils"
 Icon = "https://raw.githubusercontent.com/przewodo/ComfyUI-Przewodo-Utils/main/images/icon_564.png"
+includes = []
