--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ description = "Utilities to make it easy to develop advanced Workflows without h
 version = "1.0.4"
 license = { text = "MIT License" }
 dependencies = [
-    "teacache>=1.7.0"
+    "teacache>=1.7.0",
+    "comfyui-kjnodes>=1.0.0"
+    "comfyui-gguf>=1.0.0"
 ]
 
 [project.urls]
