--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ license = { text = "MIT License" }
 dependencies = [
     "teacache>=1.7.0",
     "comfyui-kjnodes>=1.0.0",
-    "comfyui-gguf>=1.0.0"
+    "comfyui-gguf>=1.0.0",
+    "wanblockswap>=1.0.0"
 ]
 
 [project.urls]
