Add Rife TensorRT support and enhance memory management in video processing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = [
     "teacache>=1.7.0",
     "comfyui-kjnodes>=1.0.0",
     "comfyui-gguf>=1.0.0",
-    "wanblockswap>=1.0.0"
+    "wanblockswap>=1.0.0",
+    "ComfyUI-Rife-Tensorrt>=1.0.0"
 ]
 
 [project.urls]
